--- a/atalk/css/main.css
+++ b/atalk/css/main.css
@@ -14,7 +14,7 @@
    - testimonials
    - blog posts
    - feature
-	- footer
+   - footer
 
 */
 
@@ -73,7 +73,7 @@ body {
     margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5 ,h6{
+h1, h2, h3, h4, h5, h6{
     color: #626262;
     font-family: "raleway-regular", arial;
     letter-spacing: 1px;
@@ -348,11 +348,11 @@ header.dark nav ul li a:hover{
 }
 
 .title h3{
-    color: #9b9b9b;
+    color: #8b8b8b;
     font-family: "raleway-regular";
-    font-size: 14px;
-    margin: 0 0 20px 0;
-    font-weight: normal!important;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 0 24px 0;
 }
 
 .title hr.separator{
@@ -528,7 +528,7 @@ header.dark nav ul li a:hover{
 .feature{
     max-width: 920px;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .feature ul{
@@ -537,10 +537,10 @@ header.dark nav ul li a:hover{
 
 .feature ul li{
     margin-left: 20px;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
     color: #424242;
     font-family: "raleway-regular", arial;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .feature ul li p{
