--- a/atalk/css/main.css
+++ b/atalk/css/main.css
@@ -524,6 +524,10 @@ header.dark nav ul li a:hover{
     margin: 20px 0 0 0;
 }
 
+.blog_posts a{  
+    color: blue;
+}
+
 /*    feature    */
 .feature{
     max-width: 920px;
@@ -581,7 +585,6 @@ header.dark nav ul li a:hover{
 .feature.dark ul li a:hover{
     color: #919191;
 }
-
 
 
 /*    footer    */
